admission-controller/opa-policies/15-deny-privilege-escalation-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyprivesc
  annotations:
    description: >-
      Blocks allowPrivilegeEscalation. Prevents processes from gaining more
      privileges than their parent process.
    severity: HIGH
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivilegeEscalation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyprivesc

        violation[{"msg": msg}] {
          container := get_containers[_]
          allows_priv_esc(container)
          msg := sprintf("Container %v must set allowPrivilegeEscalation: false",
            [container.name])
        }

        allows_priv_esc(container) {
          not container.securityContext.allowPrivilegeEscalation == false
        }

        allows_priv_esc(container) {
          container.securityContext.allowPrivilegeEscalation == true
        }

        get_containers[container] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
        }

        get_containers[container] {
          input.review.kind.kind in ["Deployment", "StatefulSet", "DaemonSet"]
          container := input.review.object.spec.template.spec.containers[_]
        }
